[gd_scene load_steps=2 format=3 uid="uid://d80oahnp4vhm"]

[ext_resource type="Script" path="res://scripts/multi_ui.gd" id="1_0683s"]

[node name="MultiUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0683s")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.114257, 0.318235, 0.0933406, 1)

[node name="MutiplayerButtonPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.1
anchor_bottom = 0.1
offset_right = 420.0
offset_bottom = 100.0

[node name="Container" type="HBoxContainer" parent="MutiplayerButtonPanel"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HostButton" type="Button" parent="MutiplayerButtonPanel/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Host Game"

[node name="JoinButton" type="Button" parent="MutiplayerButtonPanel/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Join Game"

[node name="StartButton" type="Button" parent="MutiplayerButtonPanel/Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start Game"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.273
anchor_right = 0.05
anchor_bottom = 0.273
offset_right = 51.0
offset_bottom = 35.0
text = "Name:"

[node name="PlayerNameLabel" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.273
anchor_right = 0.1
anchor_bottom = 0.273
offset_right = 341.0
offset_bottom = 31.0

[node name="PlayersPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.05
anchor_bottom = 0.7
offset_right = 360.4
offset_bottom = 109.0

[node name="Container" type="VBoxContainer" parent="PlayersPanel"]
layout_mode = 2

[node name="PlayerCountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.05
anchor_bottom = 0.5
offset_right = 418.0
offset_bottom = 23.0
text = "Player Count (0/4)"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.614
anchor_right = 0.667
offset_top = -50.0
offset_right = 299.0
offset_bottom = -23.0
grow_horizontal = 0
text = "GAME STATUS"
horizontal_alignment = 1

[node name="IPLabel" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.333
anchor_right = 0.1
anchor_bottom = 0.333
offset_right = 341.0
offset_bottom = 31.0

[node name="IPtLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.333
anchor_right = 0.05
anchor_bottom = 0.333
offset_right = 51.0
offset_bottom = 35.0
text = "IP:"
horizontal_alignment = 1

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -53.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
text = "Â©2025 
game by MythicalPlayz"
horizontal_alignment = 2

[connection signal="button_down" from="MutiplayerButtonPanel/Container/HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="MutiplayerButtonPanel/Container/JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="MutiplayerButtonPanel/Container/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="text_changed" from="PlayerNameLabel" to="." method="_on_line_edit_text_changed"]
